tweaked html view

--- a/views/index.html
+++ b/views/index.html
@@ -18,14 +18,14 @@
 <section class="formSection">
     <form id="myForm">
         <label for="paragraphs"><h2>How many of them ther paragraffs?</h2></label>
-        <input id="paragraphs" name="paragraphs" type="number" max="10">
+        <input id="paragraphs" name="paragraphs" type="number" value="0" max="10">
         <input id="eventButton" type="submit" value="Yertizz">
     </form>
 
 </section>
 <section class="ipsumDisplay" >
     <div id="ipsumDisplay">
-        <h1>'ere: </h1>
+        <h1>Lipsum?! Getsum 'ere:</h1>
 
     </div>
 
