--- a/views/index.html
+++ b/views/index.html
@@ -4,28 +4,30 @@
     <meta charset="UTF-8">
     <script src="quoteDisplayer.js" defer></script>
     <link rel="stylesheet" href="styles.css">
-    <title>West Country Ipsum</title>
+    <title>DiscWorld Ipsum</title>
 </head>
 <body>
 <section class="hero">
     <div class="backgroundImage">
         <div class="heroText">
-            <h1>Proper Job!</h1>
-            <h2>West Country Ipsum</h2>
+            <h1>Lorem Ipsum...</h1>
+            <img src="Great-ATuin-II.webp"/>
+            <h2>...according to Death</h2>
         </div>
     </div>
 </section>
 <section class="formSection">
-    <form id="myForm">
-        <label for="paragraphs"><h2>How many of them ther paragraffs?</h2></label>
-        <input id="paragraphs" name="paragraphs" type="number" value="0" max="10">
-        <input id="eventButton" type="submit" value="Yertizz">
+    <form method="form" id="myForm">
+        <label for="paragraphs"><h2>"HOW MANY PARAGRAPHS?"</h2></label>
+        <input id="paragraphs" name="paragraphs" type="number" value="0"  min="0" max="10">
+        <input id="eventButton" type="submit" value="HERE">
     </form>
 
 </section>
 <section class="ipsumDisplay" >
     <div id="ipsumDisplay">
-        <h1>Lipsum?! Getsum 'ere:</h1>
+        <p>A lorem ipsum generator inspired by the works of Terry Pratchett and a personal favourite character of his, Death.
+        Choose how many paragraphs of placeholder text you'd like and Death will do the rest...</p>
 
     </div>
 
